# ai-workflow-automation

./: README.md  pyproject.toml
app/: main.py  router.py  schemas.py
app/ml/: model.pkl  train.py  vectorizer.pkl
app/services/: classifier.py  router_engine.py  summarizer.py
data/: tickets.csv
